[package]
name = "cargo-bin-lib"
version = "0.1.0"
authors = ["ramn <github@rymdimperiet.org>"]
description = "Cargo subcommand for more ergonomically creating a `bin` or `lib` crate."

homepage = "https://github.com/ramn/cargo-bin-lib"
repository = "https://github.com/ramn/cargo-bin-lib"
license = "Apache-2.0"
keywords = ["cargo", "cargo-subcommand", "cli", "crates"]
readme = "README.md"

[dependencies]
